- new addresses point to sourceforge

--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 To compile all plugins you need:
 
-- automake 1.6 or better
+- automake 1.7 or better
 - libtool 1.4e or better
 
+- glib 2.2.0 
 - gtk+ 2.2.0 (http://gtk.org.pl/) - GUI
 - libgadu (http://dev.null.pl/ekg/) - Gadu-Gadu
 - libtlen (http://www.libtlen.eu.org) - Tlen
