--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 23.03.2003
 - default sound files path (gadu-gadu/krzak)
+- little fixes in chat window (GUI/krzak)
 
 20.03.2003
 - Sourceforge CVS 
