fixed userlist support

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 24.03.2003
 - you can login to gg with custom status, not only ONLINE (gadu-gadu/krzak)
+- fixed userlist support (gadu-gadu/krzak)
 
 23.03.2003
 - default sound files path (gadu-gadu/krzak)
