* real fix for the problem with icon *
+ gadu-gadu is aware of GG_STATUS_FRIENDS_MASK
+ gui_handle_status_changed now uses status from the signal, not from result of "get current status"

we need to release coding style doc or i'm gonna kill myself

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 31.03.2003
+- real fix of change status icon works with GG_STATUS_FRIENDS_MASK (gui/jabber/gadu-gadu/THrull)
 - fixed change status icon (tlen/gadu-gadu/jabber/krzak)
 
 27.03.2003
