+ added VAR_LIST, VAR_LIST in dialog accepts GList as arument with statically allocated strings, first string is used as default value + some changes in VAR_BOOL display in dialogs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-1.04.2003
+1.03.2003
+- add VAR_LIST variable type (core/gui/THrull)
+- checkboxes in dialogs are now more GNOME HIG (gui/THrull)
 - we don't need change icon signal anymore (tlen/gui/THrull)
 
 31.03.2003
