--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-1.03.2003
+2.04.2003
+- fix "reason" variable encoding (gadu-gadu/krzak)
+
+1.04.2003
 - add VAR_LIST variable type (core/gui/THrull)
 - checkboxes in dialogs are now more GNOME HIG (gui/THrull)
 - we don't need change icon signal anymore (tlen/gui/THrull)
