*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2.04.2003
 - fix "reason" variable encoding (gadu-gadu/krzak)
+- fixed removal of protocols upon unregistering (GUI/zapal)
 
 1.04.2003
 - add VAR_LIST variable type (core/gui/THrull)
