--- a/po/gg2.pot
+++ b/po/gg2.pot
@@ -191,11 +191,11 @@ msgid "Tabbed chat window style"
 msgstr ""
 
 #: src/plugins/GUI/gui_preferences.c:459
-msgid "Automaticaly show chat window"
+msgid "Automatically show chat window"
 msgstr ""
 
 #: src/plugins/GUI/gui_preferences.c:462
-msgid "Automaticaly raise chat window"
+msgid "Automatically raise chat window"
 msgstr ""
 
 #: src/plugins/GUI/gui_preferences.c:465
