--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 3.04.2003
+- load plugins in order in which they are listed in modules.load file (core/zapal)
 - fix in plugins dynamic load (GUI/krzak)
 - small cleanups in sound plugins, signal registration (sound/THrull)
 - added new sound plugin, it uses extarenal program to play sound files (sound/THrull) 
