--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 4.04.2003
+- gg2sms contacts converter in /contrib (krzak)
 - Alignment/position of XOSD box are configurable now (xosd/shasta)
 
 3.04.2003
