--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+6.04.2003
+- fixes in jabber plugin, confirmations added (jabber/krzak)
+
 4.04.2003
 - modification of dialogs and response result method (core/most plugins/THrull)
 - gg2sms contacts converter in /contrib (krzak)
