--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.04.2003
+- one little segfault fixed, one small code cleanup (sms/shasta)
 - fixes in jabber plugin, confirmations added (jabber/krzak)
 - subscription icon and support (jabber/krzak).
 
