--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+9.04.2003
+- initial commit of ICQ plugin & lib - very alpha, limited functionalicy (icq/THrull)
+
 8.04.2003
 - rewriten chat window creation, still sux but less (GUI/krzak)
 
