fix in chat window, emoticon tag now paste in proper notebook page.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10.04.2003
+- fixed paste emoticon tag choosed from window (GUI/krzak)
+
 9.04.2003
 - initial commit of ICQ plugin & lib - very alpha, limited functionalicy (icq/THrull)
 
