--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+11.04.2003
+- small improvements in chat window (GUI/krzak)
+- small fixes in autoconnect status (gadu-gadu/krzak)
+
 10.04.2003
 - VAR_LIST isn't editable (GUI/krzak)
 - fix closing tabs (GUI/krzak)
