--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 11.04.2003
+- gg 2.0pre2 released (THrull)
 - small improvements in chat window (GUI/krzak)
 - small fixes in autoconnect status (gadu-gadu/krzak)
 
