--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+12.04.2003
+- png files names revolution
+
 11.04.2003
 - gg 2.0pre2 released (THrull)
 - small improvements in chat window (GUI/krzak)
