--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+13.04.2003
+- lame file sending possibility (gadu-gadu/krzak)
+
 12.04.2003
 - introducing repo (core/zapal)
 - png files names revolution
