--- a/po/pl.po
+++ b/po/pl.po
@@ -1,4 +1,4 @@
-# $Id: pl.po,v 1.11 2003/04/13 17:58:36 shaster Exp $
+# $Id: pl.po,v 1.12 2003/04/13 23:55:30 shaster Exp $
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Igor Popik <thrull@slackware.pl>, 2002.
@@ -347,7 +347,7 @@ msgid "Disconnected"
 msgstr "Roz³±czony"
 
 #: src/plugins/gadu_gadu/gadu_gadu_plugin.c:317
-msgid "Unable to authenticate (propably)"
+msgid "Unable to authenticate (probably)"
 msgstr "Nie mo¿na przeprowadziæ uwierzytelnienia (prawdopodobnie)"
 
 #: src/plugins/gadu_gadu/gadu_gadu_plugin.c:436
