--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.04.2003
+- fixed description encoding conversion (jabber/tlen/krzak)
+
 18.04.2003
 - fix jabber and tlen disconnect that get 100% CPU usage :)
   (jabber/tlen/krzak)
