--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+24.04.2003
+- little fixes with emoticons engine (GUI/krzak)
+
 21.04.2003
 - fixed description encoding conversion (jabber/tlen/krzak)
 
