*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+25.04.2003
+- gui now uses repo in handling userlist changes (GUI/zapal)
+
 24.04.2003
 - little fixes with emoticons engine (GUI/krzak)
 
