- mozliwosc zmiany standardowego rozmiaru tej podzialki w oknie  rozmowy - ikonka przy okienkach rozmowy :)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+26.04.2003
+- icon with chat window (GUI/krzak)
+- it's possible to set default position split bar in chat window (GUI/krzak)
+
 25.04.2003
 - gui now uses repo in handling userlist changes (GUI/zapal)
 
