info label reacts when clicked on protocol (tree) - gues whos back ;-)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+28.04.2003
+- added some info about protcol in info label in tree view - not much useful at the moment (GUI/THrull)
+
 26.04.2003
 - icon with chat window (GUI/krzak)
 - it's possible to set default position split bar in chat window (GUI/krzak)
