fix initial invisible status set

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+06.05.2003
+- fixed initial status invisible set (gadu-gadu/krzak)
+
 04.05.2003
 - sms plugin pretend to be Galeon, code cleanups, fixes for idea centertel - did it break anything? (sms/shasta)
 
