--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+15.05.2003
+- kludge for tlen plugin strange behaviour, taking login() from libutil
+  (thus, segfaulting). Changed login() to ggadu_tlen_login() (tlen/shasta)
+
 14.05.2003
 - don't build arts/oss plugins without usable headers (configure/shasta)
 
@@ -9,7 +13,7 @@
 - fixed initial status invisible set (gadu-gadu/krzak)
 
 04.05.2003
-- sms plugin pretend to be Galeon, code cleanups, fixes for idea centertel - did it break anything? (sms/shasta)
+- sms plugin pretends to be Galeon, code cleanups, fixes for idea centertel - did it break anything? (sms/shasta)
 
 02.05.2003
 - do not install pixmaps/icons/CVS (Makefile/shasta)
