--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-- scrolled emoticons window
 - current status description text somewhere
 - docklet menu (??)
 - auto-away
@@ -10,3 +9,4 @@
 - docklet should work in wmaker as dockapp (docklet)
 (done)- status caption not necessary in utf8 (gadu-gadu)
 (done)- plugin docklet cant core dump if there is no gui-gtk2 plugin (docklet)
+(done)- scrolled emoticons window
