--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.05.2003
+- use global sound configuration to play sound on message send (GUI/zapal)
+
 20.05.2003
 - use global sound configuration to notify about new messages (GUI/zapal)
 
