--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+22.05.2003
+- search fixes, add city and age category (gadu-gadu/tlen/ManicMiner)
+
 21.05.2003
 - use global sound configuration to play sound on message send (GUI/zapal)
 
