--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+23.05.2003
+- birthyear search criterion added (gadu-gadu/shasta)
+
 22.05.2003
 - search fixes, add city and age category (gadu-gadu/tlen/ManicMiner)
 - added xosd 'show messages' menu option, it displays the xosd box for
