--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 24.05.2003
 - blink statuslist while connecting (GUI/zapal)
+- SMS protocol is now shown in status list (sms/zapal)
 
 23.05.2003
 - birthyear search criterion added (gadu-gadu/shasta)
