Auto away support.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 - current status description text somewhere
 - docklet menu (??)
-- auto-away
 - memory leaks audit (all)
 - sound configuration (all)
 - authorization dialogs (jabber/tlen)
@@ -10,3 +9,4 @@
 (done)- status caption not necessary in utf8 (gadu-gadu)
 (done)- plugin docklet cant core dump if there is no gui-gtk2 plugin (docklet)
 (done)- scrolled emoticons window
+(done)- auto-away
