--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 24.05.2003
 - blink statuslist while connecting (GUI/zapal)
 - SMS protocol is now shown in status list (sms/zapal)
+- auto away support (gadu-gadu/jabber/tlen/GUI/zapal)
 
 23.05.2003
 - birthyear search criterion added (gadu-gadu/shasta)
