--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+28.05.2003
+- divider value in chat window is now % (GUI/krzak)
+
 25.05.2003
 - allow +48 and 0 prefixes in phone numbers (sms/shasta)
  
